@@ -7,6 +7,7 @@ import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonTypeInfo;
 import com.fasterxml.jackson.annotation.JsonUnwrapped;
+import com.fasterxml.jackson.annotation.JsonValue;
 import com.fasterxml.jackson.annotation.JsonView;
 import com.fasterxml.jackson.annotation.ObjectIdGenerator;
 import com.fasterxml.jackson.annotation.ObjectIdGenerators;
@@ -21,9 +22,11 @@ import com.fasterxml.jackson.databind.introspect.Annotated;
 import com.fasterxml.jackson.databind.introspect.AnnotatedClass;
 import com.fasterxml.jackson.databind.introspect.AnnotatedMember;
 import com.fasterxml.jackson.databind.introspect.AnnotatedMethod;
+import com.fasterxml.jackson.databind.introspect.AnnotationMap;
 import com.fasterxml.jackson.databind.introspect.BeanPropertyDefinition;
 import com.fasterxml.jackson.databind.introspect.POJOPropertyBuilder;
 import com.fasterxml.jackson.databind.jsontype.NamedType;
+import com.fasterxml.jackson.databind.util.Annotations;
 import io.swagger.v3.core.converter.AnnotatedType;
 import io.swagger.v3.core.converter.ModelConverter;
 import io.swagger.v3.core.converter.ModelConverterContext;
@@ -31,9 +34,12 @@ import io.swagger.v3.core.util.AnnotationsUtils;
 import io.swagger.v3.core.util.Constants;
 import io.swagger.v3.core.util.Json;
 import io.swagger.v3.core.util.ObjectMapperFactory;
+import io.swagger.v3.core.util.OptionalUtils;
 import io.swagger.v3.core.util.PrimitiveType;
 import io.swagger.v3.core.util.ReflectionUtils;
+import io.swagger.v3.oas.annotations.Hidden;
 import io.swagger.v3.oas.annotations.media.DiscriminatorMapping;
+import io.swagger.v3.oas.models.Components;
 import io.swagger.v3.oas.models.ExternalDocumentation;
 import io.swagger.v3.oas.models.media.ArraySchema;
 import io.swagger.v3.oas.models.media.ComposedSchema;
@@ -80,24 +86,27 @@ import java.util.Iterator;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+import static io.swagger.v3.core.jackson.JAXBAnnotationsHelper.JAXB_DEFAULT;
 import static io.swagger.v3.core.util.RefUtils.constructRef;
 
 public class ModelResolver extends AbstractModelConverter implements ModelConverter {
     Logger LOGGER = LoggerFactory.getLogger(ModelResolver.class);
+    public static List<String> NOT_NULL_ANNOTATIONS = Arrays.asList("NotNull", "NonNull", "NotBlank", "NotEmpty");
 
     public static final String SET_PROPERTY_OF_COMPOSED_MODEL_AS_SIBLING = "composed-model-properties-as-sibiling";
     public static final String SET_PROPERTY_OF_ENUMS_AS_REF = "enums-as-ref";
 
-    public static boolean composedModelPropertiesAsSibling = System.getProperty(SET_PROPERTY_OF_COMPOSED_MODEL_AS_SIBLING) != null ? true : false;
+    public static boolean composedModelPropertiesAsSibling = System.getProperty(SET_PROPERTY_OF_COMPOSED_MODEL_AS_SIBLING) != null;
 
     /**
      * Allows all enums to be resolved as a reference to a scheme added to the components section.
      */
-    public static boolean enumsAsRef = System.getProperty(SET_PROPERTY_OF_ENUMS_AS_REF) != null ? true : false;
+    public static boolean enumsAsRef = System.getProperty(SET_PROPERTY_OF_ENUMS_AS_REF) != null;
 
     public ModelResolver(ObjectMapper mapper) {
         super(mapper);
@@ -320,8 +329,8 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
             if (xml != null) {
                 model.xml(xml);
             }
+            applyBeanValidatorAnnotations(model, annotatedType.getCtxAnnotations(), null);
             resolveSchemaMembers(model, annotatedType);
-
             if (resolvedArrayAnnotation != null) {
                 ArraySchema schema = new ArraySchema();
                 resolveArraySchema(annotatedType, schema, resolvedArrayAnnotation);
@@ -332,7 +341,7 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
                 // Store off the ref and add the enum as a top-level model
                 context.defineModel(name, model, annotatedType, null);
                 // Return the model as a ref only property
-                model = new Schema().$ref(name);
+                model = new Schema().$ref(Components.COMPONENTS_SCHEMAS_REF + name);
             }
             return model;
         }
@@ -443,7 +452,7 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
                         for (Annotation annotation : annotatedType.getCtxAnnotations()) {
                             if (annotation instanceof XmlElement) {
                                 XmlElement xmlElement = (XmlElement) annotation;
-                                if (xmlElement != null && xmlElement.name() != null && !"".equals(xmlElement.name()) && !"##default".equals(xmlElement.name())) {
+                                if (xmlElement != null && xmlElement.name() != null && !"".equals(xmlElement.name()) && !JAXB_DEFAULT.equals(xmlElement.name())) {
                                     XML xml = items.getXml() != null ? items.getXml() : new XML();
                                     xml.setName(xmlElement.name());
                                     items.setXml(xml);
@@ -481,17 +490,8 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
                     .type("object")
                     .name(name);
         } else {
-            if (_isOptionalType(type)) {
-                AnnotatedType aType = new AnnotatedType()
-                        .type(type.containedType(0))
-                        .ctxAnnotations(annotatedType.getCtxAnnotations())
-                        .parent(annotatedType.getParent())
-                        .schemaProperty(annotatedType.isSchemaProperty())
-                        .name(annotatedType.getName())
-                        .resolveAsRef(annotatedType.isResolveAsRef())
-                        .jsonViewAnnotation(annotatedType.getJsonViewAnnotation())
-                        .propertyName(annotatedType.getPropertyName())
-                        .skipOverride(true);
+            AnnotatedType aType = OptionalUtils.unwrapOptional(annotatedType);
+            if (aType != null) {
                 model = context.resolve(aType);
                 return model;
             } else {
@@ -518,14 +518,10 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
         final XmlAccessorType xmlAccessorTypeAnnotation = beanDesc.getClassAnnotations().get(XmlAccessorType.class);
 
         // see if @JsonIgnoreProperties exist
-        Set<String> propertiesToIgnore = new HashSet<String>();
-        JsonIgnoreProperties ignoreProperties = beanDesc.getClassAnnotations().get(JsonIgnoreProperties.class);
-        if (ignoreProperties != null) {
-            propertiesToIgnore.addAll(Arrays.asList(ignoreProperties.value()));
-        }
+        Set<String> propertiesToIgnore = resolveIgnoredProperties(beanDesc.getClassAnnotations(), annotatedType.getCtxAnnotations());
 
-        List<Schema> props = new ArrayList<Schema>();
-        Map<String, Schema> modelProps = new LinkedHashMap<String, Schema>();
+        List<Schema> props = new ArrayList<>();
+        Map<String, Schema> modelProps = new LinkedHashMap<>();
 
         List<BeanPropertyDefinition> properties = beanDesc.findProperties();
         List<String> ignoredProps = getIgnoredProperties(beanDesc);
@@ -574,11 +570,14 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
 
             PropertyMetadata md = propDef.getMetadata();
 
-            if (member != null && !ignore(member, xmlAccessorTypeAnnotation, propName, propertiesToIgnore)) {
+            if (member != null && !ignore(member, xmlAccessorTypeAnnotation, propName, propertiesToIgnore, propDef)) {
 
-                List<Annotation> annotationList = new ArrayList<Annotation>();
-                for (Annotation a : member.annotations()) {
-                    annotationList.add(a);
+                List<Annotation> annotationList = new ArrayList<>();
+                AnnotationMap annotationMap = member.getAllAnnotations();
+                if (annotationMap != null) {
+                    for (Annotation a : annotationMap.annotations()) {
+                        annotationList.add(a);
+                    }
                 }
 
                 annotations = annotationList.toArray(new Annotation[annotationList.size()]);
@@ -637,7 +636,7 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
                         .propertyName(propName);
 
                 final AnnotatedMember propMember = member;
-                aType.jsonUnwrappedHandler((t) -> {
+                aType.jsonUnwrappedHandler(t -> {
                     JsonUnwrapped uw = propMember.getAnnotation(JsonUnwrapped.class);
                     if (uw != null && uw.enabled()) {
                         t
@@ -879,8 +878,8 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
         // use recursion to check for method findJsonValueAccessor existence (Jackson 2.9+)
         // if not found use previous deprecated method which could lead to inaccurate result
         try {
-            Method m = BeanDescription.class.getMethod("findJsonValueAccessor", null);
-            AnnotatedMember jsonValueMember = (AnnotatedMember)m.invoke(beanDesc, null);
+            Method m = BeanDescription.class.getMethod("findJsonValueAccessor");
+            AnnotatedMember jsonValueMember = (AnnotatedMember)m.invoke(beanDesc);
             if (jsonValueMember != null) {
                 return jsonValueMember.getType();
             }
@@ -932,11 +931,29 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
         final boolean useIndex = _mapper.isEnabled(SerializationFeature.WRITE_ENUMS_USING_INDEX);
         final boolean useToString = _mapper.isEnabled(SerializationFeature.WRITE_ENUMS_USING_TO_STRING);
 
+
+        Optional<Method> jsonValueMethod = Arrays.stream(propClass.getMethods())
+                .filter(m -> m.isAnnotationPresent(JsonValue.class))
+                .filter(m -> m.getAnnotation(JsonValue.class).value())
+                .findFirst();
+
         @SuppressWarnings("unchecked")
         Class<Enum<?>> enumClass = (Class<Enum<?>>) propClass;
-        for (Enum<?> en : enumClass.getEnumConstants()) {
+
+        Enum<?>[] enumConstants = enumClass.getEnumConstants();
+        String[] enumValues = _intr.findEnumValues(propClass, enumConstants, new String[enumConstants.length]);
+
+        for (Enum<?> en : enumConstants) {
             String n;
-            if (useIndex) {
+
+            String enumValue = enumValues[en.ordinal()];
+            String s = jsonValueMethod.flatMap(m -> ReflectionUtils.safeInvoke(m, en)).map(Object::toString).orElse(null);
+
+            if (s != null) {
+                n = s;
+            } else if (enumValue != null) {
+                n = enumValue;
+            } else if (useIndex) {
                 n = String.valueOf(en.ordinal());
             } else if (useToString) {
                 n = en.toString();
@@ -951,12 +968,42 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
     }
 
     protected boolean ignore(final Annotated member, final XmlAccessorType xmlAccessorTypeAnnotation, final String propName, final Set<String> propertiesToIgnore) {
+        return ignore (member, xmlAccessorTypeAnnotation, propName, propertiesToIgnore, null);
+    }
+
+    protected boolean hasHiddenAnnotation(Annotated annotated) {
+        return annotated.hasAnnotation(Hidden.class) || (
+                annotated.hasAnnotation(io.swagger.v3.oas.annotations.media.Schema.class) &&
+                annotated.getAnnotation(io.swagger.v3.oas.annotations.media.Schema.class).hidden()
+        );
+    }
+
+    protected boolean ignore(final Annotated member, final XmlAccessorType xmlAccessorTypeAnnotation, final String propName, final Set<String> propertiesToIgnore, BeanPropertyDefinition propDef) {
         if (propertiesToIgnore.contains(propName)) {
             return true;
         }
         if (member.hasAnnotation(JsonIgnore.class)) {
             return true;
         }
+        if (hasHiddenAnnotation(member)) {
+            return true;
+        }
+
+        if (propDef != null) {
+            if (propDef.hasGetter() && hasHiddenAnnotation(propDef.getGetter())) {
+                return true;
+            }
+            if (propDef.hasSetter() && hasHiddenAnnotation(propDef.getSetter())) {
+                return true;
+            }
+            if (propDef.hasConstructorParameter() && hasHiddenAnnotation(propDef.getConstructorParameter())) {
+                return true;
+            }
+            if (propDef.hasField() && hasHiddenAnnotation(propDef.getField())) {
+                return true;
+            }
+        }
+
         if (xmlAccessorTypeAnnotation == null) {
             return false;
         }
@@ -1031,11 +1078,13 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
                             return PrimitiveType.createProperty(propType);
                         } else {
                             List<Annotation> list = new ArrayList<>();
-                            for (Annotation a : propMember.annotations()) {
-                                list.add(a);
+                            AnnotationMap annotationMap = propMember.getAllAnnotations();
+                            if (annotationMap != null) {
+                                for (Annotation a : annotationMap.annotations()) {
+                                    list.add(a);
+                                }
                             }
                             Annotation[] annotations = list.toArray(new Annotation[list.size()]);
-                            Annotation propSchemaOrArray = AnnotationsUtils.mergeSchemaAnnotations(annotations, propType);
                             AnnotatedType aType = new AnnotatedType()
                                     .type(propType)
                                     .ctxAnnotations(annotations)
@@ -1155,19 +1204,19 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
     }
 
     protected void applyBeanValidatorAnnotations(Schema property, Annotation[] annotations, Schema parent) {
-        Map<String, Annotation> annos = new HashMap<String, Annotation>();
+        Map<String, Annotation> annos = new HashMap<>();
         if (annotations != null) {
             for (Annotation anno : annotations) {
                 annos.put(anno.annotationType().getName(), anno);
             }
         }
-        if (parent != null &&
-                (
-                        annos.containsKey("javax.validation.constraints.NotNull") ||
-                        annos.containsKey("javax.validation.constraints.NotBlank") ||
-                        annos.containsKey("javax.validation.constraints.NotEmpty")
-                )) {
-            addRequiredItem(parent, property.getName());
+        if (parent != null && annotations != null) {
+            boolean requiredItem = Arrays.stream(annotations).anyMatch(annotation ->
+                    NOT_NULL_ANNOTATIONS.contains(annotation.annotationType().getSimpleName())
+            );
+            if (requiredItem) {
+                addRequiredItem(parent, property.getName());
+            }
         }
         if (annos.containsKey("javax.validation.constraints.Min")) {
             if ("integer".equals(property.getType()) || "number".equals(property.getType())) {
@@ -1188,8 +1237,8 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
                 property.setMaximum(new BigDecimal(size.max()));
             } else if (property instanceof StringSchema) {
                 StringSchema sp = (StringSchema) property;
-                sp.minLength(new Integer(size.min()));
-                sp.maxLength(new Integer(size.max()));
+                sp.minLength(Integer.valueOf(size.min()));
+                sp.maxLength(Integer.valueOf(size.max()));
             } else if (property instanceof ArraySchema) {
                 ArraySchema sp = (ArraySchema) property;
                 sp.setMinItems(size.min());
@@ -1564,16 +1613,16 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
     }
 
     protected BigDecimal resolveMinimum(Annotated a, Annotation[] annotations, io.swagger.v3.oas.annotations.media.Schema schema) {
-        if (schema != null && NumberUtils.isNumber(schema.minimum())) {
-            String filteredMinimum = schema.minimum().replaceAll(Constants.COMMA, StringUtils.EMPTY);
+        if (schema != null && NumberUtils.isCreatable(schema.minimum())) {
+            String filteredMinimum = schema.minimum().replace(Constants.COMMA, StringUtils.EMPTY);
             return new BigDecimal(filteredMinimum);
         }
         return null;
     }
 
     protected BigDecimal resolveMaximum(Annotated a, Annotation[] annotations, io.swagger.v3.oas.annotations.media.Schema schema) {
-        if (schema != null && NumberUtils.isNumber(schema.maximum())) {
-            String filteredMaximum = schema.maximum().replaceAll(Constants.COMMA, StringUtils.EMPTY);
+        if (schema != null && NumberUtils.isCreatable(schema.maximum())) {
+            String filteredMaximum = schema.maximum().replace(Constants.COMMA, StringUtils.EMPTY);
             return new BigDecimal(filteredMaximum);
         }
         return null;
@@ -1738,7 +1787,7 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
             Discriminator discriminator = new Discriminator()
                     .propertyName(disc);
             if (declaredSchemaAnnotation != null) {
-                DiscriminatorMapping mappings[] = declaredSchemaAnnotation.discriminatorMapping();
+                DiscriminatorMapping[] mappings = declaredSchemaAnnotation.discriminatorMapping();
                 if (mappings != null && mappings.length > 0) {
                     for (DiscriminatorMapping mapping : mappings) {
                         if (!mapping.value().isEmpty() && !mapping.schema().equals(Void.class)) {
@@ -1769,14 +1818,39 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
                 }
             }
         }
-        if (rootAnnotation != null && !"".equals(rootAnnotation.name()) && !"##default".equals(rootAnnotation.name())) {
+        if (rootAnnotation != null && !"".equals(rootAnnotation.name()) && !JAXB_DEFAULT.equals(rootAnnotation.name())) {
             XML xml = new XML().name(rootAnnotation.name());
-            if (rootAnnotation.namespace() != null && !"".equals(rootAnnotation.namespace()) && !"##default".equals(rootAnnotation.namespace())) {
+            if (rootAnnotation.namespace() != null && !"".equals(rootAnnotation.namespace()) && !JAXB_DEFAULT.equals(rootAnnotation.namespace())) {
                 xml.namespace(rootAnnotation.namespace());
             }
             return xml;
         }
         return null;
+    }
+
+    protected Set<String> resolveIgnoredProperties(Annotations a, Annotation[] annotations) {
+
+        Set<String> propertiesToIgnore = new HashSet<>();
+        JsonIgnoreProperties ignoreProperties = a.get(JsonIgnoreProperties.class);
+        if (ignoreProperties != null) {
+            propertiesToIgnore.addAll(Arrays.asList(ignoreProperties.value()));
+        }
+        propertiesToIgnore.addAll(resolveIgnoredProperties(annotations));
+        return propertiesToIgnore;
+    }
+
+    protected Set<String> resolveIgnoredProperties(Annotation[] annotations) {
+
+        Set<String> propertiesToIgnore = new HashSet<>();
+        if (annotations != null) {
+            for (Annotation annotation : annotations) {
+                if (annotation instanceof JsonIgnoreProperties) {
+                    propertiesToIgnore.addAll(Arrays.asList(((JsonIgnoreProperties) annotation).value()));
+                    break;
+                }
+            }
+        }
+        return propertiesToIgnore;
     }
 
     protected Integer resolveMinItems(AnnotatedType a, io.swagger.v3.oas.annotations.media.ArraySchema arraySchema) {
@@ -1935,9 +2009,7 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
 
         Map<String, Object> extensions = resolveExtensions(a, annotations, schemaAnnotation);
         if (extensions != null) {
-            for (String ext : extensions.keySet()) {
-                schema.addExtension(ext, extensions.get(ext));
-            }
+            extensions.forEach(schema::addExtension);
         }
     }
 
@@ -1948,7 +2020,7 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
         if (model.getRequired() == null || model.getRequired().isEmpty()) {
             model.addRequiredItem(propName);
         }
-        if (model.getRequired().stream().noneMatch(s -> propName.equals(s))) {
+        if (model.getRequired().stream().noneMatch(propName::equals)) {
             model.addRequiredItem(propName);
         }
     }
@@ -1973,8 +2045,12 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
 
     private List<String> getIgnoredProperties(BeanDescription beanDescription) {
         AnnotationIntrospector introspector = _mapper.getSerializationConfig().getAnnotationIntrospector();
-        String[] ignored = introspector.findPropertiesToIgnore(beanDescription.getClassInfo(), true);
-        return ignored == null ? Collections.emptyList() : Arrays.asList(ignored);
+        JsonIgnoreProperties.Value v = introspector.findPropertyIgnorals(beanDescription.getClassInfo());
+        Set<String> ignored = null;
+        if (v != null) {
+            ignored = v.findIgnoredForSerialization();
+        }
+        return ignored == null ? Collections.emptyList() : new ArrayList<>(ignored);
     }
 
     /**
